Fix kubelet crashes

--- a/ansible/install_infra/roles/kubernetes_master_bootstrap/templates/kubeadm_config.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes_master_bootstrap/templates/kubeadm_config.yaml.j2
@@ -33,3 +33,9 @@ cgroupDriver: systemd
 # However, it requires to manually accept them (`kubectl get csr`, `kubectl certificate approve`
 # See https://github.com/kubernetes/kubeadm/issues/1223
 #serverTLSBootstrap: true
+
+# avoid "Failed to start ContainerManager failed to initialise top level QOS containers" error (ref: https://github.com/kubernetes/kubernetes/issues/43856)
+# avoid "kubelet crashes with: root container [kubepods] doesn't exist" (ref: https://github.com/kubernetes/kubernetes/issues/95488)
+# Also configured in kubernetes_kubelet_extra_parameters
+cgroupsPerQOS: false
+enforceNodeAllocatable: []
