Fix pihole, requires privileged

--- a/ansible/install_applications/roles/infra_pihole_deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra_pihole_deploy/app/deploy/statefulSet.yaml.j2
@@ -44,6 +44,7 @@ spec:
           # pihole requires root and a writable root filesystem
           #runAsNonRoot: true
           #readOnlyRootFilesystem: true
+          privileged: true
         env:
           - name: WEBPASSWORD
             valueFrom:
