Fix elasticsearch, requires SYS_CHROOT

--- a/ansible/install_applications/roles/logging_elasticsearch_deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/logging_elasticsearch_deploy/app/deploy/statefulSet.yaml.j2
@@ -36,6 +36,8 @@ spec:
           #runAsNonRoot: true
           #runAsUser: 1000
           #readOnlyRootFilesystem: true
+          capabilities:
+            add: ["SYS_CHROOT"]
         readinessProbe:
           tcpSocket:
             port: transport
