Add missing cap on home-roomassistant

--- a/ansible/install_applications/roles/home_roomassistant_deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/home_roomassistant_deploy/app/deploy/deployment.yaml.j2
@@ -34,6 +34,7 @@ spec:
           readOnlyRootFilesystem: true
           capabilities:
             add:
+            - NET_RAW
             - NET_ADMIN
         resources:
           requests:
