--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -88,7 +88,7 @@ watchers:
       - "7.3.[0-9]+-apache-buster"
     excludes:
       - "7.3.[0-9]-apache-buster"
-      - "7.3.[01][0-9]-apache-buster"
+      - "7.3.[0-2][0-9]-apache-buster"
   - type: github_tag
     repo: leenooks/phpLDAPadmin
     tag: {{ phpldapadmin.version }}
