--- a/ansible/install_applications/roles/infra_pihole_deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra_pihole_deploy/app/deploy/statefulSet.yaml.j2
@@ -20,6 +20,23 @@ spec:
         {{ pihole.labels_def | to_nice_yaml() | indent(8) }}
         {{ pihole.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
+      initContainers:
+      - name: inject-conf
+        image: "{{ busybox.container.image }}"
+        imagePullPolicy: Always
+        command:
+          - "sh"
+          - "-c"
+          - |
+            echo "Injecting pihole-FTL.conf in the volume"
+            # The entrypoint needs to be able to write this file, we can't just mount the volume directly on /etc/pihole/pihole-FTL.conf
+            cp /tmp/pihole-FTL.conf /etc/pihole/pihole-FTL.conf
+        volumeMounts:
+        - name: pihole-pv-claim
+          mountPath: /etc/pihole
+        - name: pihole-config
+          mountPath: /tmp/pihole-FTL.conf
+          subPath: pihole-FTL.conf
       containers:
       - name: pihole
         image: "{{ pihole.container.image }}"
@@ -83,9 +100,6 @@ spec:
         - name: pihole-config
           mountPath: /etc/dnsmasq_hosts
           subPath: dnsmasq_hosts
-        - name: pihole-config
-          mountPath: /etc/pihole/pihole-FTL.conf
-          subPath: pihole-FTL.conf
       volumes:
       - name: tz-config
         hostPath:
