--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -675,7 +675,8 @@ watchers:
       - ^[0-9]+\.[0-9]+\.[0-9]+-alpine$
     excludes:
       - ^1\.[0-9]\..*-alpine$
-      - ^1\.1[0-8]\..*-alpine$
+      - ^1\.1[0-9]\..*-alpine$
+      - ^1\.2[0]\..*-alpine$
   - name: Homer
     type: github_release
     repo: bastienwirtz/homer
