--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -218,9 +218,10 @@ watchers:
     image: {{ nodered.base_image.name }}
     tag: {{ nodered.base_image.tag }}
     includes:
-      - .*-12-minimal-amd64
+      - [0-9]+\.[0-9]+\.[0-9]+-[0-9]+-minimal
     excludes:
-      - 1\.0\..*
+      - ^1\.
+      - ^2\.[0]\.
   - type: github_tag
     repo: vesse/node-ldapauth-fork
     tag: v{{ nodered.additional_modules.ldapauth_fork.version }}
