--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/alertmanager/alertmanager.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/alertmanager/alertmanager.yaml.j2
@@ -21,8 +21,8 @@ route:
   receiver: "{{ alertmanager.default_receiver | default("null") }}"
   repeat_interval: 12h
   routes:
-  - match:
-      alertname: Watchdog
+  - matchers:
+    - "alertname = Watchdog"
     receiver: "null"
 
 receivers:
