--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/service-monitors/alertmanager.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/service-monitors/alertmanager.yaml.j2
@@ -16,6 +16,8 @@ spec:
       sourceLabels:
       - __name_  
     port: web
+  - interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
+    port: reloader-web
   selector:
     matchLabels:
       {{ alertmanager.labels_def | to_nice_yaml() | indent(6) }}
