--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/service-monitors/coreDNS.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/service-monitors/coreDNS.yaml.j2
@@ -10,7 +10,7 @@ spec:
   - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
     interval: {{ (15 * service_monitors.interval_factor | float) | int }}s
     port: metrics
-  jobLabel: prometheus-target
+  jobLabel: app.kubernetes.io/name
   namespaceSelector:
     matchNames:
     - kube-system
