--- a/ansible/install_applications/roles/monitoring_node_exporter_deploy/app/deploy/clusterRole.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_node_exporter_deploy/app/deploy/clusterRole.yaml.j2
@@ -2,6 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: node-exporter
+  namespace: {{ node_exporter.namespace }}
   labels:
     {{ node_exporter.labels_def | to_nice_yaml() | indent(4) }}
     {{ node_exporter.labels_desc | to_nice_yaml() | indent(4) }}
