--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/alertmanager/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/alertmanager/networkPolicies.yaml.j2
@@ -25,6 +25,9 @@ spec:
             matchLabels:
               {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
 
+    - ports:
+        - port: web
+        - port: reloader-web
         # Allow from prometheus
         - namespaceSelector:
             matchLabels:
