--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/prometheus/clusterRoleBinding.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/prometheus/clusterRoleBinding.yaml.j2
@@ -2,6 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: prometheus-k8s
+  namespace: {{ prometheus.namespace }}
   labels:
     {{ prometheus.labels_def | to_nice_yaml() | indent(4) }}
     {{ prometheus.labels_desc | to_nice_yaml() | indent(4) }}
