--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/service-monitors/prometheus.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/service-monitors/prometheus.yaml.j2
@@ -10,6 +10,8 @@ spec:
   endpoints:
   - interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
     port: web
+  - interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
+    port: reloader-web
   selector:
     matchLabels:
       prometheus-target: prometheus-k8s
