--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -218,7 +218,7 @@ watchers:
     image: {{ nodered.base_image.name }}
     tag: {{ nodered.base_image.tag }}
     includes:
-      - [0-9]+\.[0-9]+\.[0-9]+-[0-9]+-minimal
+      - '[0-9]+\.[0-9]+\.[0-9]+-[0-9]+-minimal'
     excludes:
       - ^1\.
       - ^2\.[0]\.
@@ -311,7 +311,7 @@ watchers:
     image: {{ pihole.base_image.name }}
     tag: {{ pihole.base_image.tag }}
     includes:
-      - "20[0-9]+\.[0-9]+(\.[0-9]+)?"
+      - '20[0-9]+\.[0-9]+(\.[0-9]+)?'
     excludes:
       - 2021-09.*
   - type: docker_registry
@@ -406,7 +406,7 @@ watchers:
     image: {{ zonemta_mongo.base_image.name }}
     tag: {{ zonemta_mongo.base_image.tag }}
     includes:
-      - [0-9]+\.[0-9]+.[0-9]+-.*
+      - '[0-9]+\.[0-9]+.[0-9]+-.*'
     excludes:
       - ^4\..*
   - name: "ZoneMTA Node"
