--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -274,6 +274,16 @@ watchers:
       - ^[1-4]\..*
       - ^5\.[0-5]\..*
   - type: docker_registry
+    repo: {{ zigbee2mqtt.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
+    image: {{ zigbee2mqtt.base_image.name }}
+    tag: {{ zigbee2mqtt.base_image.tag }}
+    includes:
+      - ^[0-9]+\.[0-9]+\.[0-9]+.*$
+    excludes:
+      - ^0\..*
+      - ^1\.[0-9]\..*
+      - ^1\.[1][0-9]\..*
+  - type: docker_registry
     repo: {{ frigate.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
     image: {{ frigate.base_image.name }}
     tag: {{ frigate.base_image.tag }}
