--- a/ansible/install_applications/roles/app_base_deploy/templates/namespace/nas-nfs-persistent-volume.yaml.j2
+++ b/ansible/install_applications/roles/app_base_deploy/templates/namespace/nas-nfs-persistent-volume.yaml.j2
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: {{ application_namespace }}.{{ item.key }}
-{% if item.value.labels | default([]) | length > 0%}
+  name: {{ application_namespace }}.{{ volume_name }}
+{% if volume_conf.labels | default([]) | length > 0%}
   labels:
     app_namespace: {{ application_namespace }}
-{% for label_name, label_value in item.value.labels.items() %}
+{% for label_name, label_value in volume_conf.labels.items() %}
     {{ label_name }}: {{ label_value }}
 {% endfor %}
 {% endif %}
@@ -13,18 +13,18 @@ spec:
   capacity:
     storage: 1M
   accessModes: [ "ReadWriteOnce", "ReadOnlyMany", "ReadWriteMany" ]
-  persistentVolumeReclaimPolicy: {{ item.value.reclaim_policy }}
+  persistentVolumeReclaimPolicy: {{ volume_conf.reclaim_policy }}
   storageClassName: {{ kubernetes_nas_nfs_storage_class_name }}
   nfs:
-    server: {{ item.value.nfs_server }}
-    path: {{ item.value.nfs_path }}
+    server: {{ volume_conf.nfs_server }}
+    path: {{ volume_conf.nfs_path }}
 
 ---
 
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ item.key }}
+  name: {{ volume_name }}
   namespace: {{ application_namespace }}
 spec:
   accessModes: [ "ReadWriteMany" ]
@@ -35,6 +35,6 @@ spec:
   selector:
     matchLabels:
       app_namespace: {{ application_namespace }}
-{% for label_name, label_value in item.value.labels.items() %}
+{% for label_name, label_value in volume_conf.labels.items() %}
       {{ label_name }}: {{ label_value }}
 {% endfor %}
