--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -369,6 +369,7 @@ watchers:
     tag: {{ docker_registry.base_image.tag }}
     excludes:
       - latest
+      - beta
       - .*-rc\.[0-9]+
       - 2\.[0-6]\.
     includes:
