--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -58,7 +58,9 @@ watchers:
       - v3\.1[0-9]\..*
   - type: github_release
     repo: intel/multus-cni
-    release: v3.7.2
+    release: v3.8.1
+    excludes:
+      - v3\.[0-7]\..*
 
 
   ###############
