--- a/ansible/install_infra/roles/kubernetes_master_cni_deploy/templates/multus/multus-daemonset.yml.j2
+++ b/ansible/install_infra/roles/kubernetes_master_cni_deploy/templates/multus/multus-daemonset.yml.j2
@@ -168,10 +168,12 @@ spec:
       tolerations:
       - operator: Exists
         effect: NoSchedule
+      - operator: Exists
+        effect: NoExecute
       serviceAccountName: multus
       containers:
       - name: kube-multus
-        image: ghcr.io/k8snetworkplumbingwg/multus-cni:v3.8
+        image: ghcr.io/k8snetworkplumbingwg/multus-cni:v3.8.1
         command: ["/entrypoint.sh"]
         args:
         - "--multus-conf-file=auto"
@@ -192,6 +194,23 @@ spec:
           mountPath: /host/opt/cni/bin
         - name: multus-cfg
           mountPath: /tmp/multus-conf
+      initContainers:
+        - name: install-multus-binary
+          image: ghcr.io/k8snetworkplumbingwg/multus-cni:v3.8.1
+          command:
+            - "cp"
+            - "/usr/src/multus-cni/bin/multus"
+            - "/host/opt/cni/bin/multus"
+          resources:
+            requests:
+              cpu: "10m"
+              memory: "15Mi"
+          securityContext:
+            privileged: true
+          volumeMounts:
+            - name: cnibin
+              mountPath: /host/opt/cni/bin
+              mountPropagation: Bidirectional
       terminationGracePeriodSeconds: 10
       volumes:
         - name: cni
