--- a/ansible/install_applications/roles/infra_kubernetes_metrics_server_deploy/app/deploy/auth-delegator.yaml.j2
+++ b/ansible/install_applications/roles/infra_kubernetes_metrics_server_deploy/app/deploy/auth-delegator.yaml.j2
@@ -1,8 +1,10 @@
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: metrics-server:system:auth-delegator
+  labels:
+    {{ kubernetes_metrics_server.labels_def | to_nice_yaml() | indent(4) }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
