--- a/ansible/install_applications/roles/infra_kubernetes_metrics_server_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/infra_kubernetes_metrics_server_deploy/app/deploy/networkPolicies.yaml.j2
@@ -17,4 +17,4 @@ spec:
     # Allow from everywhere
     # (needed for both `kubectl top` and the kubernetes-dashboard)
     - ports:
-        - port: main-port
+        - port: https
