--- a/ansible/install_applications/roles/infra_kubernetes_metrics_server_deploy/app/deploy/auth-reader.yaml.j2
+++ b/ansible/install_applications/roles/infra_kubernetes_metrics_server_deploy/app/deploy/auth-reader.yaml.j2
@@ -1,9 +1,11 @@
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: metrics-server-auth-reader
   namespace: kube-system
+  labels:
+    {{ kubernetes_metrics_server.labels_def | to_nice_yaml() | indent(4) }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
