--- a/ansible/install_applications/roles/infra_kubernetes_metrics_server_deploy/app/deploy/metrics-apiservice.yaml.j2
+++ b/ansible/install_applications/roles/infra_kubernetes_metrics_server_deploy/app/deploy/metrics-apiservice.yaml.j2
@@ -1,14 +1,16 @@
 ---
-apiVersion: apiregistration.k8s.io/v1beta1
+apiVersion: apiregistration.k8s.io/v1
 kind: APIService
 metadata:
   name: v1beta1.metrics.k8s.io
+  labels:
+    {{ kubernetes_metrics_server.labels_def | to_nice_yaml() | indent(4) }}
 spec:
+  group: metrics.k8s.io
+  groupPriorityMinimum: 100
+  insecureSkipTLSVerify: true
   service:
     name: metrics-server
     namespace: {{ kubernetes_metrics_server.namespace }}
-  group: metrics.k8s.io
   version: v1beta1
-  insecureSkipTLSVerify: true
-  groupPriorityMinimum: 100
   versionPriority: 100
