--- a/ansible/install_applications/roles/infra_kubernetes_metrics_server_deploy/app/deploy/resource-reader.yaml.j2
+++ b/ansible/install_applications/roles/infra_kubernetes_metrics_server_deploy/app/deploy/resource-reader.yaml.j2
@@ -3,14 +3,20 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: system:metrics-server
+  labels:
+    {{ kubernetes_metrics_server.labels_def | to_nice_yaml() | indent(4) }}
 rules:
+- apiGroups:
+  - ""
+  resources:
+  - nodes/metrics
+  verbs:
+  - get
 - apiGroups:
   - ""
   resources:
   - pods
   - nodes
-  - nodes/stats
-  - namespaces
   verbs:
   - get
   - list
@@ -19,6 +25,8 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
+  labels:
+    {{ kubernetes_metrics_server.labels_def | to_nice_yaml() | indent(4) }}
   name: system:metrics-server
 roleRef:
   apiGroup: rbac.authorization.k8s.io
