--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -142,7 +142,7 @@ watchers:
     image: {{ sabnzbd.base_image.name }}
     tag: {{ sabnzbd.base_image.tag }}
     includes:
-      - 3\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
+      - 3\.[0-9]+\.[0-9]+-alpine14
     excludes:
       - ^3.[0-9]\..*
       - .*-alpine3\.[0-9]$
