--- a/ansible/install_applications/roles/monitoring_grafana_deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_grafana_deploy/app/deploy/statefulSet.yaml.j2
@@ -47,6 +47,8 @@ spec:
           runAsNonRoot: true
           runAsUser: 65534
           readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
         readinessProbe:
           httpGet:
             path: /api/health
