--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/operator/serviceAccount.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/operator/serviceAccount.yaml.j2
@@ -6,3 +6,5 @@ metadata:
   labels:
     {{ prometheus_operator.labels_def | to_nice_yaml() | indent(4) }}
     {{ prometheus_operator.labels_desc | to_nice_yaml() | indent(4) }}
+automountServiceAccountToken: false
+
